# qrh-dl-calibration

./: .gitignore  LICENSE  Makefile  README.md  evaluation.py  pyproject.toml  requirements.txt  train_qrh_model.py  training.py
data/raw/data_100k/: preview_100k.csv  train_X.csv  train_y.csv  val_X.npy  x_scaler.pkl  y_scaler.pkl
docs/: mkdocs.yml
docs/docs/: index.md
experiments/advanced_qrh_100k_20250819_184403/: qrh_advanced_100k.keras  qrh_advanced_100k.weights.h5  training_summary.txt
experiments/experiment_100k_20250823_192521/: qrh_advanced_100k.keras  qrh_advanced_100k.weights.h5  training_summary.txt
experiments/experiment_100k_20250823_200844/: model_config.json  pca_info.pkl  qrh_advanced_100k.keras  qrh_advanced_100k.weights.h5  training_summary.txt
experiments/experiment_100k_20250825_215646/: qrh_advanced_100k.keras  qrh_advanced_100k.weights.h5  training_summary.txt
notebooks/: pipeline.ipynb  pipeline_clean.ipynb
notebooks/reports/: QRH_100k_PCA30_results.json
notebooks/results/: notebook_exp_100k.keras  notebook_exp_100k.weights.h5
reports/evaluation/: QRH_Advanced_100k_PCA30_results.json
reports/evaluation_fixed/: QRH_Advanced_100k_PCA30_results.json
reports/experiment_100k_20250823_192521/: QRH_100k_PCA30_results.json
reports/experiment_100k_20250825_215646/: QRH_100k_PCA30_results.json
scripts/: evaluation.py  training.py
src/: __init__.py  converter.py  data_gen.py  model_architectures.py  training_utils.py  training_utils_qrh.py
tests/: test_heston_fft.py
(+5 files in other folders)
