[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "heston_calib_project"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Duong N.C.K" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["heston_calib_project"]
include = ["pyproject.toml", "heston_calib_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["heston_calib_project"]
force-sort-within-sections = true

